# quiz-builder

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/__tests__/: App.test.tsx  Explanation.test.tsx  Sidebar.test.tsx
client/src/: App.css  App.tsx  Explanation.tsx  NewTest.tsx  Question.tsx  Sidebar.tsx  Test.tsx  index.css
server/: app.py  database.py  explain_answer.py  get_questions.py  models.py  pyproject.toml  schemas.py
server/__tests__/: test_explain_answer.py  test_get_questions.py
